--- a/all/all.css
+++ b/all/all.css
@@ -1,60 +1,110 @@
+
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
 /* vars */
 
 :root {
-    --bs-border-radius: 20px;
-    --bs-font-sans-serif: "Lexend", system-ui, -apple-system, "Segoe UI", sans-serif;
-    
-    --primary: #339961;
+  --bs-border-radius: 20px;
+  --bs-font-sans-serif: "Lexend", system-ui, -apple-system, "Segoe UI",
+    sans-serif;
+
+  --primary: #339961;
 }
 
 /* Templating and fixes */
 
 body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  box-sizing: border-box;
+}
+
+#app {
+  width: 100%;
+  height: 100%;
 }
 
 section {
-    margin-bottom: 10vh;
+  margin-bottom: 10vh;
 }
 
 .navbar {
-    z-index: 100 !important;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3) !important;
+  z-index: 100 !important;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3) !important;
+}
+
+footer {
+  margin-top: auto;
 }
 
 @media screen and (max-width: 768px) {
-    section {
-        margin-bottom: 5vh;
-        padding: 0 5%;
-    }
+  section {
+    margin-bottom: 5vh;
+    padding: 0 5%;
+  }
 }
 
-a, button {
-    cursor: pointer;
-    user-select: none !important;
+a,
+button {
+  cursor: pointer;
+  user-select: none !important;
 }
-
 
 /* rounded corners class management stuff */
 
 .rounded {
-    border-radius: var(--bs-border-radius)
+  border-radius: var(--bs-border-radius);
 }
 .shadowed-soft {
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3) !important;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3) !important;
 }
 .shadowed-medium {
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5) !important;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5) !important;
 }
 .shadowed-hard {
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.7) !important;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.7) !important;
 }
 
 /* bg primary color */
 .bg-primary {
-    background-color: var(--primary) !important;
+  background-color: var(--primary) !important;
+}
+
+/* Profile picture */
+.pfp {
+  border-radius: 50%;
+  width: 35px;
+}
+
+/* blog article styling */
+
+.card-title {
+    font-weight: 600;
+}
+
+.card-author {
+    font-weight: 500;
+}
+
+.card-date {
+    font-weight: 400;
+}
+
+.card-text {
+    /* not empty ? */
+    font-weight: 300;
+}
+
+.card-footer {
+    font-weight: 400;
+}
+
+.activate-article {
+    border: none;
+    background-color: rgba(0,0,0,0);
+}
+
+.card-pads {
+    padding: 1em;
 }
 
