find page uses actual google maps
Co-authored-by: JacobGru <JacobGru@users.noreply.github.com>
Co-authored-by: Jackson Philips <tboyj@users.noreply.github.com>

--- a/all/all.css
+++ b/all/all.css
@@ -7,6 +7,8 @@
   --bs-font-sans-serif: "Lexend", system-ui, -apple-system, "Segoe UI",
     sans-serif;
 
+  --bs-body-bg: #f0f0f0;
+
   --primary: #339961;
 }
 
