--- a/all/all.css
+++ b/all/all.css
@@ -14,6 +14,8 @@
 
 /* Templating and fixes */
 
+
+
 body {
   display: flex;
   flex-direction: column;
@@ -49,6 +51,10 @@ footer {
 
 .hidden {
     display: none !important;
+}
+
+.indent {
+  text-indent: 2em !important;
 }
 
 a,
