--- a/pages/blogs/styles.css
+++ b/pages/blogs/styles.css
@@ -8,7 +8,8 @@
 
 /* expanded state */
 .card-body {
-  max-height: 1000px; /* must exceed real content height */
+  max-height: 500px; /* must exceed real content height */
+  overflow-y: auto;
   opacity: 1;
 }
 
@@ -62,4 +63,8 @@
 }
 .author {
   filter: brightness(0.5);
+}
+
+.muted {
+  filter: opacity(0.9);
 }
